--- a/Ejercicio 6/index.html
+++ b/Ejercicio 6/index.html
@@ -35,9 +35,37 @@
 
     </div>
 
-    <div>
-        <p>Connectem talent, transformem l'educació</p>
-    </div>
+    <div class="header">
+        <div class="logo">
+            <img src="./IMG/logo_home_fb.png" alt="Logo">
+            <img src="./IMG/logo_home_educacio.png" alt="Logo">
+        </div>
+
+       
+        <div class="social-icons">
+            <a href="instagram">
+                <img src="./IMG/twitter_color.png" alt="Instagram Logo" class="social-icon">
+            </a>
+            <a href="Facebook">
+                <img src="./IMG/facebook_color.png" alt="Facebook Logo" class="social-icon">
+            </a>
+            <a href="Yt">
+                <img src="./IMG/youtube_color.png" alt="YouTube Logo" class="social-icon">
+            </a>
+            <a href="Spotify">
+                <img src="./IMG/slideshare_color.png" alt="YouTube Logo" class="social-icon">
+            </a>
+            <a href="RSS">
+                <img src="./IMG/rss_color.png" alt="YouTube Logo" class="social-icon">
+            </a>
+            <a href="slide">
+                <img src="./IMG/storify.png" alt="YouTube Logo" class="social-icon">
+            </a>
+        </div>
+     </div>
+
+     <div class="imagencabecera">
+        <img src="./IMG/slide-3_0.jpg" alt="">
 
 
     <div>
@@ -84,20 +112,26 @@
         </div>
 
         <div class="card1 div2">
-            <img src="./IMG/Noves.jpg">
-            <h3>Noves experiències al Qui és Qui</h3>
-            <h2>REVISTA ESCOLAR DIGITAL</h2>
-            <p>La Revista Escolar Digital (RED) proposa la creació d' un mitjá do comucació gestionat per alumnes, dinamitzat per professors i coordinat per periodistes. Es crea un...</p>
-            <b><p>LLEGIR MÉS</p></b> 
-            <div class="card1 EduDema">
-                <img src="./IMG/edudema.jpg">
-                <h2>#EduDema</h2>
-                <p>Tweets by EduDemà</p>
-                <div class="card1 blog">
-                    <img src="./IMG/blog.jpg">
+            <div>
+                <img src="./IMG/Noves.jpg">
+                <h3>Noves experiències al Qui és Qui</h3>
+                <h2>REVISTA ESCOLAR DIGITAL</h2>
+                <p>La Revista Escolar Digital (RED) proposa la creació d' un mitjá do comucació gestionat per alumnes, dinamitzat per professors i coordinat per periodistes. Es crea un...</p>
+                <b><p>LLEGIR MÉS</p></b> 
+            </div>
+
+            <div class="div3">
+
+                <div class="card1 div3 left">
+                    <img src="./IMG/edudema.jpg">
+                    <h2>#EduDema</h2>
+                    <p>Tweets by EduDemà</p>
+                </div>
+                <div class="card1 div3 rigth">
+                    <img src="./IMG/icono_blog.png">
                     <h2>Blog</h2>
                     <p>test</p>
-                    <p>dissabte, 11 juliol, 2020 Per F. Jaume Bofill</p>
+                    <p>dissabte, 11 juliol, 2020 Per F. Jaume Bofill</p>   
                 </div>
             </div>
         </div>
