--- a/Nuevaroberto/index.html
+++ b/Nuevaroberto/index.html
@@ -143,7 +143,72 @@
                 </div>
             </div>
         </div>
-    </div>     
+    </div>    
+    <div class="container7">
+        <div class="left-column">
+          <h2>Subscriu-te!</h2>
+          <form>
+            <div class="form-group">
+              <label for="name">Nom:</label>
+              <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+              <label for="surname">Cognoms:</label>
+              <input type="text" id="surname" name="surname" required>
+            </div>
+            <div class="form-group">
+              <label for="email">Adreça electrònica:</label>
+              <input type="email" id="email" name="email" required>
+            </div>
+            <p>Deixant-nos la teva adreça electrònica, acceptes la política de privadesa.</p>
+            <button type="submit">Vols veure butlletins anteriors?</button>
+          </form>
+        </div>
+        <div class="right-column">
+          <h2>Agenda</h2>
+
+        </div>
+      </div>
+      <footer>
+        <div class="footer-container">
+          <div class="promou">
+            <h3>Promou</h3>
+            <img src="./imagenes/logopeu.png" alt="Fundació Joan Miró">
+          </div>
+          <div class="navega">
+            <h3>NAVEGA</h3>
+            <ul>
+              <li><a href="#">El Projecte</a></li>
+              <li><a href="#">Qui és Qui</a></li>
+              <li><a href="#">Crides</a></li>
+              <li><a href="#">Recursos</a></li>
+              <li><a href="#">Agenda</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+          <div class="segueix-nos">
+            <h3>SEGUEIX-NOS</h3>
+            <div class="social-icons">
+              <a href="#" class="twitter-icon"></a>
+              <a href="#" class="facebook-icon"></a>
+              <a href="#" class="youtube-icon"></a>
+              <a href="#" class="flickr-icon"></a>
+              <a href="#" class="rss-icon"></a>
+            </div>
+          </div>
+          <div class="aliances">
+            <img src="mac_logo.png" alt="MAC">
+            <img src="./imagenes/foundation_icon_transparente_blanco_0.png" alt="Edcamp">
+          </div>
+        </div>
+        <div class="legal-info">
+          <a href="#">Avís legal</a>
+          <a href="#">Política de cookies</a>
+          <a href="#">Mapa Web</a>
+          <a href="#">Contacte</a>
+        </div>
+      </footer>
+    
 </div>
 </body>
 </html>
