--- a/Nuevaroberto/index.html
+++ b/Nuevaroberto/index.html
@@ -146,6 +146,7 @@
     </div>    
     <div class="container7">
         <div class="left-column">
+            <img style="width: max-content;" src="./imagenes/istockphoto-1274428125-612x612.jpg" alt="">
           <h2>Subscriu-te!</h2>
           <form>
             <div class="form-group">
@@ -197,7 +198,7 @@
             </div>
           </div>
           <div class="aliances">
-            <img src="mac_logo.png" alt="MAC">
+            <img src="./imagenes/Captura de pantalla 2024-11-06 094559.png" alt="MAC">
             <img src="./imagenes/foundation_icon_transparente_blanco_0.png" alt="Edcamp">
           </div>
         </div>
